sales order module fix 7